src/user.css
/* ... */
* {
  transition: background-color 0.3s ease-in-out, color .3s ease-in-out !important;
}

/* Spicetify Overrides */
.encore-dark-theme,
.encore-dark-theme .encore-base-set {
  --background-press: var(--card-hover-color) !important;
}

.spotify__container--is-desktop.spotify__os--is-windows .Root__globalNav {
  padding-inline: calc(64px* var(--zoom-adjust-coefficient, 1)) calc(135px* var(--zoom-adjust-coefficient, 1));
}

/* Font */
body,
button,
input,
select,
textarea,
.encore-text,
.main-dropDown-dropDown,
.TypeElement-type-ballad,
.TypeElement-type-ballad-textBase,
.TypeElement-type-mesto-textSubdued,
.TypeElement-type-ballad-textBrightAccent,
.encore-text-body-small,
.encore-text-body-medium,
.encore-text-body-large,
.encore-text-title-medium,
.encore-text-title-small,
.circular-sp-vietnamese,
.circular-sp-vietnamese button,
.circular-sp-vietnamese input,
.circular-sp-vietnamese select,
.circular-sp-vietnamese textarea,
.encore-text-headline-large,
.main-nowPlayingView-sectionHeaderSpacing .main-nowPlayingView-lyricsContent {
  --text-subdued: var(--spice-subtext) !important;
  font-family: var(--font-to-use) !important;
  letter-spacing: 0.015rem;
}

.encore-text-body-large-bold,
.encore-text-body-medium-bold,
.encore-text-body-small-bold {
  font-family: var(--font-to-use) !important;
  font-weight: var(--bold-font-weight);
}

.encore-text-headline-large,
.encore-text-title-medium,
.encore-text-title-small,
.main-trackInfo-name {
  font-weight: var(--extra-bold-font-weight);
  letter-spacing: -0.025rem;
}

.view-homeShortcutsGrid-shortcut .view-homeShortcutsGrid-main .view-homeShortcutsGrid-name {
  letter-spacing: 0.025rem;
  padding-left: var(--padding-sm);
}

.Root__now-playing-bar .encore-text-body-small {
  letter-spacing: 0.025rem;
}

.encore-text-marginal,
.encore-text-body-small,
.encore-text-body-medium,
.encore-text-body-large {
  font-weight: var(--normal-font-weight);
  letter-spacing: 0.015rem;
}

.TypeElement-type-ballad-textBase-useBrowserDefaultFocusStyle {
  font-weight: var(--normal-font-weight);
  font-family: var(--encore-title-font-stack), var(--fallback-fonts, sans-serif);
}

.TypeElement-type-ballad,
.encore-text-body-small-bold {
  font-weight: var(--bold-font-weight);
}

.Type__TypeElement-sc-goli-97j-0,
.TypeElement-type-mesto {
  color: var(--spice-text);
}

.main-entityHeader-topbarTitle {
  margin-left: var(--margin-md);
}

/* Scrollbar */
.os-theme-spotify.os-scrollbar {
  --os-size: 4px;
  --os-handle-bg: rgba(var(--spice-rgb-subtext), 0.3);
  --os-handle-bg-active: rgba(var(--spice-rgb-subtext), 0.3);
  --os-handle-bg-hover: rgba(var(--spice-rgb-subtext), 0.7);
  --os-handle-border-radius: 1rem;
}

.os-scrollbar {
  z-index: 2;
}

* {
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
  scrollbar-width: thin !important;
}

/* Button styles */
button,
.ap8U6ZVS8BqMxUdinBis
/* ADD: card close button */
,
.main-avatar-avatar,
.main-playPauseButton-button,
.main-skipForwardButton-button,
.main-skipBackButton-button,
.ButtonInner-small-iconOnly,
.ButtonInner-medium-iconOnly,
.ButtonInner-large-iconOnly,

.main-globalNav-historyButtons button,
.Button-textBase-medium-medium-buttonTertiary-condensedAll-useBrowserDefaultFocusStyle,
.Button-textBrightAccent-large-large-buttonTertiary-iconOnly-condensed-useBrowserDefaultFocusStyle,
.ButtonInner-medium,
.Button-small-buttonPrimary-useBrowserDefaultFocusStyle-data-is-icon-only,
.Button-small-small-buttonTertiary-iconOnly-useBrowserDefaultFocusStyle,
.Button-small-small-buttonTertiary-condensedAll-useBrowserDefaultFocusStyle,
.Root__globalNav .main-globalNav-link-icon,
.Button-small-buttonSecondary-useBrowserDefaultFocusStyle,
.LegacyChipComponent-checkbox-chip-sm-useBrowserDefaultFocusStyle,
.main-entityHeader-imageContainerClickable,
.ChipInnerComponent-sm,
.ChipInnerComponent-sm-selected,
.ChipInnerComponent-md,
.ChipInnerComponent-md-selected,
.ChipInnerComponent-lg,
.ChipInnerComponent-lg-selected,
.Button-small-buttonPrimary-useBrowserDefaultFocusStyle,
.Button-small-buttonSecondary-useBrowserDefaultFocusStyle:hover {
  text-wrap: nowrap;
  border-radius: var(--button-border-radius) !important;
  transition: 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
}

.main-userWidget-box,
.main-avatar-avatar,
.main-globalNav-icon,
.main-globalNav-link-icon,
.Root__globalNav .main-globalNav-link-icon {
  background-color: var(--normal-button-color) !important;
  aspect-ratio: 1/1;
}

.main-userWidget-box:focus,
.main-userWidget-box:hover,
.main-userWidget-box[data-context-menu-open="true"],
.BoxComponent-group-card-naked-isInteractive-padding_12px:hover::after {
  background-color: var(--card-hover-color);
}

.main-actionButtons {
  padding-inline: var(--gap-md) 0px !important;
}

.main-actionButtons button svg {
  transform: scale(1.25);
}

.main-actionButtons button,
.main-userWidget-boxCondensed,
.main-topBar-historyButtons .main-topBar-button {
  height: 3rem;
  width: 3rem;
  aspect-ratio: 1/1;
}

.main-avatar-avatar,
.main-userWidget-hasAvatar,
.main-avatar-avatar div,
.main-avatar-avatar img {
  min-height: 2rem !important;
  min-width: 2rem !important;
}

.main-nowPlayingView-aboutArtistV2Avatar,
.main-nowPlayingView-aboutArtistV2Avatar img,
.main-nowPlayingView-aboutArtistV2Avatar div {
  min-height: 8rem !important;
  min-width: 8rem !important;
}
/* ... */

